--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -9,9 +9,9 @@ log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH\:mm\:ss,SSS} %-5
  
 ## \u65E5\u5FD7\u8F93\u51FA\u5230\u6587\u4EF6 SystemOut.log ###
 log4j.appender.file=org.apache.log4j.FileAppender
-log4j.appender.file.File=C:/logs/SystemOut.log
-log4j.appender.file.MaxFileSize=64KB
-log4j.appender.file.MaxBackupIndex=10
-log4j.appender.file.Append=false
+log4j.appender.file.file=C:/logs/SystemOut.log
+log4j.appender.file.maxFileSize=64KB
+log4j.appender.file.maxBackupIndex=10
+log4j.appender.file.append=false
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH\:mm\:ss,SSS} %-5p %m at %l%n
