--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="lib/db/hibernate3.jar"/>
 	<classpathentry kind="lib" path="lib/db/jdbc.mysql.jar"/>
@@ -10,5 +11,12 @@
 	<classpathentry kind="lib" path="lib/db/hibernate-commons-annotations.jar"/>
 	<classpathentry kind="lib" path="lib/db/ejb3-persistence.jar"/>
 	<classpathentry kind="lib" path="lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="lib/junit-4.3.1.jar"/>
+	<classpathentry kind="lib" path="lib/antlr-2.7.6.jar"/>
+	<classpathentry kind="lib" path="lib/db/asm.jar"/>
+	<classpathentry kind="lib" path="lib/db/cglib-2.1.3.jar"/>
+	<classpathentry kind="lib" path="lib/db/commons-collections-3.1.jar"/>
+	<classpathentry kind="lib" path="lib/db/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="lib/db/jta.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
