--- a/.classpath
+++ b/.classpath
@@ -18,5 +18,9 @@
 	<classpathentry kind="lib" path="lib/db/commons-collections-3.1.jar"/>
 	<classpathentry kind="lib" path="lib/db/dom4j-1.6.1.jar"/>
 	<classpathentry kind="lib" path="lib/db/jta.jar"/>
+	<classpathentry kind="lib" path="lib/jackson/jackson-core-asl-1.9.13.jar"/>
+	<classpathentry kind="lib" path="lib/jackson/jackson-jaxrs-1.9.2.jar"/>
+	<classpathentry kind="lib" path="lib/jackson/jackson-mapper-asl-1.9.13.jar"/>
+	<classpathentry kind="lib" path="lib/jackson/jackson-xc-1.9.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
