--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,12 @@ build/
 # 会忽略 doc/notes.txt 但不包括 doc/server/arch.txt
 doc/*.txt
 # ignore all .txt files in the doc/ directory
-/bin/
 /build/
+/bin/
 
 /junit/
+/temp/
+
+/WebContent/bower_components
+
+/.idea
