--- a/.classpath
+++ b/.classpath
@@ -21,5 +21,6 @@
 	<classpathentry kind="lib" path="lib/jackson/2/jackson-annotations-2.2.3.jar"/>
 	<classpathentry kind="lib" path="lib/jackson/2/jackson-core-2.2.3.jar"/>
 	<classpathentry kind="lib" path="lib/jackson/2/jackson-databind-2.2.3.jar"/>
+	<classpathentry kind="lib" path="lib/jspFile/commons-fileupload-1.3.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
