--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="lib/db/hibernate3.jar"/>
 	<classpathentry kind="lib" path="lib/db/jdbc.mysql.jar"/>
 	<classpathentry kind="lib" path="lib/log/commons-logging-1.1.jar"/>
@@ -22,5 +21,6 @@
 	<classpathentry kind="lib" path="lib/jackson/2/jackson-core-2.2.3.jar"/>
 	<classpathentry kind="lib" path="lib/jackson/2/jackson-databind-2.2.3.jar"/>
 	<classpathentry kind="lib" path="lib/jspFile/commons-fileupload-1.3.1.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
